@@ -3,7 +3,6 @@ package com.technofacts.lnf.company.converter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import com.technofacts.lnf.company.model.*;
 import com.technofacts.lnf.dto.company.CompanyDto;
@@ -31,7 +30,6 @@ public class CompanyConverter {
                 .arnIssueDate(entity.getArnIssueDate())
                 .sacCode(entity.getSacCode())
                 .address(new ArrayList<>())
-                .image(new ArrayList<>())
                 .gst(new ArrayList<>())
                 .account(new ArrayList<>())
                 .theme(new ArrayList<>())
@@ -39,16 +37,13 @@ public class CompanyConverter {
 
         dto.getAddress().addAll(entity.getAddress().stream()
                 .map(AddressConverter::toTransportModel)
-                .filter(Objects::nonNull).collect(Collectors.toList()));
-        dto.getImage().addAll(entity.getImage().stream()
-                .map(ImageConverter::toTransportModel)
-                .filter(Objects::nonNull).collect(Collectors.toList()));
+                .filter(Objects::nonNull).toList());
         dto.getGst().addAll(entity.getGst().stream().map(GstConverter::toTransportModel)
-                .filter(Objects::nonNull).collect(Collectors.toList()));
+                .filter(Objects::nonNull).toList());
         dto.getAccount().addAll(entity.getAccount().stream().map(AccountConverter::toTransportModel)
-                .filter(Objects::nonNull).collect(Collectors.toList()));
+                .filter(Objects::nonNull).toList());
         dto.getTheme().addAll(entity.getTheme().stream().map(ThemeConverter::toTransportModel)
-                .filter(Objects::nonNull).collect(Collectors.toList()));
+                .filter(Objects::nonNull).toList());
 
         return dto;
     }
@@ -57,7 +52,6 @@ public class CompanyConverter {
         Company entity = toEntityModel(transport, new Company());
 
         addAddressToEntityModel(transport, entity);
-        imageToEntityModel(transport, entity);
         addGstToEntityModel(transport, entity);
         addAccountToEntityModel(transport, entity);
         addThemeToEntityModel(transport, entity);
@@ -96,16 +90,6 @@ public class CompanyConverter {
             entityList.add(entity);
         });
         company.getAddress().addAll(entityList);
-    }
-
-    private static void imageToEntityModel(CompanyDto transport, Company company) {
-        List<Image> entityList = new ArrayList<>();
-        transport.getImage().stream().filter(Objects::nonNull).forEach(dto -> {
-            Image entity = ImageConverter.toEntityModel(dto, new Image());
-            entity.setCompany(company);
-            entityList.add(entity);
-        });
-        company.getImage().addAll(entityList);
     }
 
     private static void addGstToEntityModel(CompanyDto transport, Company company) {
